--- a/src/HomePage/MarketContent/style.scss
+++ b/src/HomePage/MarketContent/style.scss
@@ -123,3 +123,8 @@
     }
   }
 }
+@media (max-width: 575.98px) {
+  .market-content-container .card-container {
+    width: 100%;
+  }
+}
