--- a/src/Layouts/main/style.scss
+++ b/src/Layouts/main/style.scss
@@ -225,6 +225,9 @@
 @media (max-width: 1199.98px) {
   .top-bar-wrapper,
   .blue-bar-wrapper,
+  .card-bar-container,
+  .market-content-container,
+  .breadcrumbs-wrapper,
   .footer-wrapper {
     padding-left: 6%;
     padding-right: 6%;
