--- a/src/components/BreadCrumbs/style.scss
+++ b/src/components/BreadCrumbs/style.scss
@@ -15,3 +15,8 @@
     }
   }
 }
+@media (max-width: 575.98px) {
+  .breadcrumb-item {
+    font-size: 10px!important;
+  }
+}
